# goit-algo-hw-07

./: Select_1.sql  Select_10.sql  Select_11.sql  Select_12.sql  Select_2.sql  Select_3.sql  Select_4.sql  Select_5.sql  Select_6.sql  Select_7.sql  Select_8.sql  Select_9.sql  alembic.ini  connect.py  create_tables.sql  main.py  my_select.py  pyproject.toml
alembic/versions/: 872658d8d140_init.py
conf/: models.py
seeds/: seed.py
