[tool.poetry]
name = "my-data-base"
version = "0.1.0"
description = ""
authors = ["Dubas14 <ev.hanzha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
faker = "^19.12.0"
poetry = "^1.8.3"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
